external-crates/move/crates/move-compiler/tests/move_check/expansion/module_alias_as_type.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
warning[W09001]: unused alias
  ┌─ tests/move_check/expansion/module_alias_as_type.move:6:14
  │
6 │     use 0x2::X;
  │              ^ Unused 'use' of alias 'X'. Consider removing it
  │
  = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E03004]: unbound type
  ┌─ tests/move_check/expansion/module_alias_as_type.move:7:16
  │
7 │     fun foo(x: X) { x; }
  │                ^ Unbound type 'X' in current scope
